test updated and unused code removed