@@ -45,7 +45,6 @@ class RecordListHelperTest {
         //Given
         final CaseData caseData = caseData();
         final CaseDetails<CaseData, State> updatedCaseDetails = new CaseDetails<>();
-        final CaseDetails<CaseData, State> beforeDetails = new CaseDetails<>();
         final RecordListing recordListing = new RecordListing();
         recordListing.setHearingFormat(HearingFormat.FACE_TO_FACE);
         recordListing.setRegionList(getMockedRegionData());
@@ -71,7 +70,6 @@ class RecordListHelperTest {
     void shouldMidEventMethodSuccessfullyPopulateHearingVenueData() {
         final CaseData caseData = caseData();
         final CaseDetails<CaseData, State> updatedCaseDetails = new CaseDetails<>();
-        final CaseDetails<CaseData, State> beforeDetails = new CaseDetails<>();
         final RecordListing recordListing = new RecordListing();
         recordListing.setHearingFormat(HearingFormat.FACE_TO_FACE);
         recordListing.setRegionList(getMockedRegionData());
@@ -98,17 +96,19 @@ class RecordListHelperTest {
         final CaseData caseData = caseData();
         caseData.setNote("This is a test note");
         final CicCase cicCase = new CicCase();
-        cicCase.setSubjectCIC(Collections.emptySet());
-        cicCase.setApplicantCIC(Collections.emptySet());
-        cicCase.setRepresentativeCIC(Collections.emptySet());
+
+
+        cicCase.setRecordNotifyPartySubject(Set.of(SubjectCIC.SUBJECT));
+        cicCase.setRecordNotifyPartyRepresentative(Set.of(RepresentativeCIC.REPRESENTATIVE));
+        cicCase.setRecordNotifyPartyRespondent(Set.of(RespondentCIC.RESPONDENT));
         caseData.setCicCase(cicCase);
 
         recordListHelper.checkNullCondition(cicCase);
         recordListHelper.getErrorMsg(cicCase);
 
-        assertThat(caseData.getCicCase().getRecordNotifyPartySubject()).isNull();
-        assertThat(caseData.getCicCase().getRecordNotifyPartyRepresentative()).isNull();
-        assertThat(caseData.getCicCase().getRecordNotifyPartyRespondent()).isNull();
+        assertThat(caseData.getCicCase().getRecordNotifyPartySubject()).isNotNull();
+        assertThat(caseData.getCicCase().getRecordNotifyPartyRepresentative()).isNotNull();
+        assertThat(caseData.getCicCase().getRecordNotifyPartyRespondent()).isNotNull();
     }
 
 
